--- a/style.css
+++ b/style.css
@@ -1,3 +1,128 @@
+
 h1{
     color: mediumseagreen;
+}
+
+#profile{
+    width: 24vw;
+    padding: 4vh 3vw;
+    height: 92vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    background: var(--background-image) center center;
+    background-size: cover !important;
+    background-repeat: no-repeat;
+    position: fixed;
+    color: rgb(22, 22, 22) !important;
+}
+
+#profile_image{
+    background: url(https://avatars3.githubusercontent.com/u/36105478?v=4) center;
+    width: 180px;
+    height: 180px;
+    min-width: 180px;
+    min-height: 180px;
+    max-width: 180px;
+    max-height: 180px;
+    border-radius: 5px;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+}
+
+#profile div{
+    margin: 1.5vh 0px;
+}
+
+#username{
+    font-family: 'Font Awesome 5 Free';
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#username span{
+    margin: 1vh 0px;
+}
+
+#about{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+}
+
+#about span {
+    margin: 1vh 0px;
+    display: block;
+    font-weight: bold;
+}
+
+#about a, #username a {
+    color: rgb(22, 22, 22) !important;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.socials{
+    color: #fff;
+    text-decoration: none;
+    /* margin: 3vh 0px !important; */
+}
+
+.socials span {
+    display: inline-block !important;
+    margin-right: 2vw !important;
+    font-weight: normal !important;
+}
+
+/* right-side */
+#content{
+    width: 64vw;
+    padding: 4vh 3vw;
+    height: 92vh;
+    display: inline-block;
+    padding-left: 33vw;
+}
+
+#work{
+    margin: 2vh 0px;
+    padding: 4vh 0px !important;
+}
+
+#work_section{
+    position: relative;
+    height: 668.81px;
+}
+
+.card{
+    position: absolute;
+    
+    width: calc(49% - 30px);
+    display: flex;
+    text-decoration: none;
+}
+
+/* .projects section{
+    background: rgb(20, 20, 20);
+} */
+
+.section_title {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 1vh 0px;
+    padding: 0px 1px;
+    word-wrap: break-word;
+}
+
+.about_section {
+    font-size: 18px;
+    font-family: "Questrial", sans-serif;
+    margin: 2vh 0px;
+    font-weight: bold;
+    word-wrap: break-word;
+}
+
+.bottom_section {
+    margin: 1vh 0px;
+    font-size: 14px;
+    word-wrap: break-word;
 }
