--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,7 +228,7 @@ input, select, textarea {
 		font-size: 0.6em;
 	}
 
-	@media screen and (max-width: 736px) {
+		@media screen and (max-width: 736px) {
 
 		h1 {
 			font-size: 2em;
@@ -3901,4 +3901,33 @@ input, select, textarea {
 				background-attachment: scroll;
 			}
 
+			#sidebar nav{
+				margin-right: 15px;
+			}
+
 		}
+
+/* Sidebar content */
+#profile_image{
+	background: url(https://avatars3.githubusercontent.com/u/36105478?v=4) center;
+	background-repeat: repeat;
+	background-size: auto;
+	width: 180px;
+	height: 180px;
+	min-width: 180px;
+	min-height: 180px;
+	max-width: 180px;
+	max-height: 180px;
+	border-radius: 5px;
+	background-size: cover !important;
+	background-repeat: no-repeat !important;
+}
+
+#socials{
+	color: #ffffff;
+}
+
+#socials a {
+	text-decoration: none;
+	border-bottom: none;
+}
